# ocman

./: .gitignore  .gitleaksignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  DECISIONS.md  NOTICE  README.md  SPEC-orsession.md  TODO.md  ocman.py  opencode_recover_session.py  pyproject.toml  rebuild_opencode.sh
.agents/docs/research/: 20260713-1254-01-opencode-filesystem-runtime-artifacts-research-prompt.md  20260713-1319-01-gpt56-opencode-filesystem-runtime-artifacts-reference-research.md
.agents/docs/walkthrougs/: 20260710-1917-walkthough.md  20260710-2044-walkthough.md  20260710-2053-walkthough.md  20260710-2122-walkthough.md  20260710-2322-walkthough.md  20260710-2355-walkthough.md
.agents/plans/: 20260708-project-export-ipd.md
.agents/plans/done/: 2026-07-04-assess-functionality-disk-usage.md  2026-07-04-assess-performance.md  2026-07-04-assess-testing.md
.agents/plans/executed/: 20260617-ocman-enhancements-ipd.md  20260617-ocman-gui-ipd.md  20260625-ocman-move-project-session-ipd.md  20260625-ocman-session-export-import-ipd.md  20260704-assess-architecture-destructive-confirm-helper.md  20260704-assess-functionality-restart-to-project-prompts.md  20260704-assess-performance.md  20260704-assess-self-documentation-clean-backups-preview.md  20260704-assess-self-documentation-process-lock.md  20260704-assess-testing.md  20260705-assess-documentation.md  20260706-assess-compatibility-filter-and-naming.md  20260706-assess-edge-cases-filter-and-naming.md  20260706-assess-security-filter-and-migration.md  20260706-compacted-restart-file-tools.md  20260707-assess-documentation.md  20260707-assess-prose.md  20260708-project-export-ipd.md  20260709-01-list-polish-ipd.md  20260709-02-batch-target-resolver-ipd.md  20260709-03-multi-session-actions-ipd.md  20260709-04-compact-secrets-and-yes-ipd.md  20260709-05-restore-multi-and-import-rename-ipd.md  20260710-compact-ux-and-shutil-hardening-ipd.md  20260710-gap-closure-ipd-01-05-followup.md  20260711-batch-delete-reporting-ipd.md  20260711-listing-and-disk-reporting-ipd.md  20260711-move-git-aware-remote-runbook-ipd.md  20260715-assess-functionality-ipd.md  20260715-ls-lp-short-aliases-ipd.md  20260716-guard-mutations-while-running-ipd.md  20260716-list-running-insecure-servers-ipd.md  20260717-2223-01-assess-documentation.md  20260717-accessibility-no-dim-text-ipd.md  20260717-chunk-large-sessions-ipd.md  20260717-session-header-two-tables-ipd.md  20260717-storage-doctor-reclaim-ipd.md  20260718-1648-01-tui-parity-roadmap.md  20260718-1648-02-tui-p1-delete-safety-ipd.md  20260718-1648-03-tui-p2-doctor-reclaim-ipd.md  (+21 more)
.agents/plans/pending/: 2026-07-04-assess-performance.md  (+54 more)
.agents/workflows/: index.md
.claude/commands/: handoff.md  whatnext.md
.github/workflows/: ci.yml
.opencode/commands/: handoff.md  whatnext.md
agents/plans/: 2026-06-14-opencode-db-fix-implementation-plan.md  2026-06-26-cross-platform-ci-ipd.md  historical_metrics_ipd.md  ocman_gui_spec.md
ocman/: __init__.py  cli.py
ocman_tui/: __init__.py  app.py  core.py
ocman_tui/css/: style.css
ocman_tui/widgets/: database.py  models.py  running.py  sidebar.py  spend.py  storage.py
orsession/: app.py  core.py
scripts/: check_orsession.sh  dev-editable-install.sh  migrate_recovery_names.py
tests/: conftest.py  test_compacted_project_prompt.py  test_config_backup_restore.py  test_config_parsing.py  test_core.py  test_export_import.py  test_file_tools.py  test_migrate_recovery_names.py  test_move.py  test_ocman.py  test_perf.py  test_recovery.py  test_recovery_naming.py  test_restart_project_prompt.py  test_tui.py
tests/fixtures/: opencode_export.json
(+462 files in other folders)
