[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ocman"
version = "1.0.5"
description = "Interactive TUI for browsing, recovering, and compacting opencode sessions"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Gabriele G. R. Fariello" },
]
dependencies = [
    "textual>=3.0.0",
    "rich>=13.0.0",
    "pysqlite3-binary>=0.5.0; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "anyio",
]

[project.scripts]
ocman = "ocman:main"

[tool.hatch.build.targets.wheel]
packages = [
    "ocman_tui",
]

[tool.hatch.build.targets.wheel.force-include]
"ocman.py" = "ocman.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "opencode.json",
    "opencode.jsonc",
    ".agents/",
    "workflow-artifacts/",
]
