[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ocman"
version = "1.1.0"
description = "Interactive TUI for browsing, recovering, and compacting opencode sessions"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Gabriele G. R. Fariello" },
]
dependencies = [
    "textual>=3.0.0",
    "rich>=13.0.0",
    "pysqlite3-binary>=0.5.0; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "anyio",
]

[project.scripts]
ocman = "ocman:main"

[tool.hatch.build.targets.wheel]
packages = [
    "ocman_tui",
]

[tool.hatch.build.targets.wheel.force-include]
"ocman.py" = "ocman.py"
"scripts/migrate_recovery_names.py" = "scripts/migrate_recovery_names.py"

# NOTE (editable installs): hatchling honors the force-include above even in
# editable mode, so `pip install -e .` copies ocman.py into site-packages in
# addition to writing the redirect .pth. That copy shadows the .pth and goes
# stale on every edit. After an editable install, remove the copy so the .pth
# serves the working tree:  rm -f "$(python -c 'import site;print(site.getsitepackages()[0])')/ocman.py"
# (see scripts/dev-editable-install.sh).
[tool.hatch.build.targets.editable]
dev-mode-dirs = ["."]

[tool.hatch.build.targets.sdist]
exclude = [
    "opencode.json",
    "opencode.jsonc",
    ".agents/",
    "workflow-artifacts/",
]
