[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ocman"
version = "1.2.0"
description = "Administer, maintain, and repair your OpenCode agentic environment: sessions, database, and config."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Gabriele G. R. Fariello" },
]
dependencies = [
    "textual>=3.0.0",
    "rich>=13.0.0",
    "vistab>=1.1.3",
    "pysqlite3-binary>=0.5.0; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "anyio",
]

[project.scripts]
ocman = "ocman:main"

[tool.hatch.build.targets.wheel]
packages = [
    "ocman",
    "ocman_tui",
]

[tool.hatch.build.targets.wheel.force-include]
"scripts/migrate_recovery_names.py" = "scripts/migrate_recovery_names.py"

# NOTE (editable installs): packaging as a clean directory layout (ocman package)
# prevents editable mode from creating a stale shadow copy of ocman.py in site-packages.
# The console script and working tree files will correctly track edits.
[tool.hatch.build.targets.editable]
dev-mode-dirs = ["."]

[tool.hatch.build.targets.sdist]
exclude = [
    "opencode.json",
    "opencode.jsonc",
    ".agents/",
    "workflow-artifacts/",
]
